--- a/css.css
+++ b/css.css
@@ -239,6 +239,13 @@
   background-color: #e8e8e8;
 }
 
+.weatherbutton {
+  height: 90px;
+  width: 90px;
+  border: none;
+  background-color: #e8e8e8;
+}
+
 .weatherback2 {
   float: right;
   margin-right: 25px;
@@ -250,13 +257,12 @@
 }
 
 .weathericon {
-  margin-top: 5px;
-  height: 110px;
-  width: 110px;
+  height: 100px;
+  width: 100px;
 }
 
 .weathericon2 {
-  margin-top: 20px;
+  margin-right: 10px;
   height: 90px;
   width: 90px;
 }
@@ -770,10 +776,9 @@ header {
 
 .completionmeterback {
   margin: auto;
-  height: 5px;
+  height: 14px;
   width: 254px;
   border-radius: 5px;
-  padding: 7px;
   box-sizing: border-box;
   background-color: whitesmoke;
   box-shadow: 0px 1px 5px var(--accentColour);
